feat: automate purchase asset clearing
